# fast_jieba

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: main.yml  python-publish.yml
fast_jieba/: __init__.py  __init__.pyi
fast_jieba/analyse/: __init__.py  __init__.pyi
fast_jieba/anlysis/: __init__.pyi
src/: lib.rs
tests/: test_fast_jieba.py
