[package]
name = "fast_jieba"
version = "0.2.0"
edition = "2021"

[lib]
name = "fast_jieba"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jieba-rs = { version = "0.6", features = ["tfidf", "textrank"] }
pyo3 = { version = "0.16.1", features = ["abi3-py37", "extension-module"] }
rayon = "1.5"
once_cell = "1.8"

